objects/Weekly_Case_Trending_Reports__c.object
<CustomObject>
    <fields>
        <fullName>Age_Hours__c</fullName>
        <label>Age (Hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Analytic_Snapshot_Name__c</fullName>
        <label>Analytic Snapshot Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <label>Case Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner__c</fullName>
        <label>Case Owner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <description>To Capture the Functional Area of the Case</description>
        <label>Functional Area</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opened_Date__c</fullName>
        <label>Opened Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Release_Type__c</fullName>
        <label>Release Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Completion_Date__c</fullName>
        <label>Target Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Weekly Case Trending Reports</label>
    <nameField>
        <displayFormat>CTRP-{00000000}</displayFormat>
        <label>Weekly Case Trending Report Primary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Weekly Case Trending Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>